fix '/' spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -199,6 +199,7 @@ img {
 
 .main-name {
   padding: 10px;
+  padding-left: 43px;
   padding-right: 0;
   font-family: 'Lato', sans-serif;
   font-size: 40px;
